force-app/main/default/objects/Account/fields/ATPAccountId__c.field-meta.xml
<CustomField>
    <fullName>ATPAccountId__c</fullName>
    <description>Used to store Account Id returned by ATP service</description>
    <externalId>true</externalId>
    <label>ATPAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>