force-app/main/default/objects/Account/fields/ATPBillingAccountId__c.field-meta.xml
<CustomField>
    <fullName>ATPBillingAccountId__c</fullName>
    <description>Used to store the Customer Number of the billing profile returned by ATP system</description>
    <externalId>true</externalId>
    <label>ATPBillingAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>