force-app/main/default/objects/Account/fields/ATPInvoiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>ATPInvoiceAccountId__c</fullName>
    <description>Used to store Invoice Account Id returned by ATP service</description>
    <externalId>true</externalId>
    <label>ATPInvoiceAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>