force-app/main/default/objects/Account/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <formula>BillingStreet__c + &apos; &apos; + BillingHouseNo__c + IF(ISNULL(BillingHouseNoExt__c), &apos;&apos;, &apos; &apos; + BillingHouseNoExt__c) +
IF(ISNULL(BillingAddressExt__c), &apos;&apos;, BR() + BillingAddressExt__c) +
BillingPostalCode__c + &apos; &apos; + BillingCity__c + IF(ISNULL(BillingCityExt__c), &apos;&apos;, &apos; &apos; + BillingCityExt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rechnungsadresse</label>
    <type>Text</type>
</CustomField>