force-app/main/default/objects/Account/fields/BillingAddressExt__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressExt__c</fullName>
    <label>Adresszusatz Rechnungadresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>