force-app/main/default/objects/Account/fields/BillingAddressId__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressId__c</fullName>
    <label>Adress ID Rechnungadresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>