force-app/main/default/objects/Account/fields/BillingCityExt__c.field-meta.xml
<CustomField>
    <fullName>BillingCityExt__c</fullName>
    <label>Stadtteil Rechnungadresse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>