force-app/main/default/objects/Account/fields/BillingHouseNo__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNo__c</fullName>
    <label>Hausnummer Rechnungadresse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>