force-app/main/default/objects/Account/fields/BillingHouseNoExt__c.field-meta.xml
<CustomField>
    <fullName>BillingHouseNoExt__c</fullName>
    <label>Hausnummer Zusatz Rechnungadresse</label>
    <length>6</length>
    <type>Text</type>
</CustomField>