force-app/main/default/objects/Account/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>PLZ Rechnungadresse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>