force-app/main/default/objects/Account/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>Bundesland Rechnungadresse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BillingCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GermanStates</valueSetName>
    </valueSet>
</CustomField>