force-app/main/default/objects/Account/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Strasse Rechnungadresse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>