force-app/main/default/objects/Account/fields/BusinessAddress__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddress__c</fullName>
    <formula>BusinessStreet__c + &apos; &apos; + BusinessHouseNo__c + IF(ISNULL(BusinessHouseNoExt__c), &apos;&apos;, &apos; &apos; + BusinessHouseNoExt__c) +
IF(ISNULL(BusinessAddressExt__c), &apos;&apos;, BR() + BusinessAddressExt__c) +
BusinessPostalCode__c + &apos; &apos; + BusinessCity__c + IF(ISNULL(BusinessCityExt__c), &apos;&apos;, &apos; &apos; + BusinessCityExt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geschäftsadresse</label>
    <type>Text</type>
</CustomField>