force-app/main/default/objects/Account/fields/BusinessCity__c.field-meta.xml
<CustomField>
    <fullName>BusinessCity__c</fullName>
    <label>Stadt Geschäftsadresse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>