force-app/main/default/objects/Account/fields/BusinessCountry__c.field-meta.xml
<CustomField>
    <fullName>BusinessCountry__c</fullName>
    <label>Land Geschäftsadresse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>