force-app/main/default/objects/Account/fields/BusinessHouseNo__c.field-meta.xml
<CustomField>
    <fullName>BusinessHouseNo__c</fullName>
    <label>Hausnummer Geschäftsadresse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>