force-app/main/default/objects/Account/fields/BusinessPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessPostalCode__c</fullName>
    <label>PLZ Geschäftsadresse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>