force-app/main/default/objects/Account/fields/BusinessStreet__c.field-meta.xml
<CustomField>
    <fullName>BusinessStreet__c</fullName>
    <label>Strasse Geschäftsadresse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>