force-app/main/default/objects/Account/fields/ConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aus Lead Umgewandelt</label>
    <type>Checkbox</type>
</CustomField>