force-app/main/default/objects/Account/fields/DigitalInvoiceActive__c.field-meta.xml
<CustomField>
    <fullName>DigitalInvoiceActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>&quot;Rechnung aktiv - Sollte Sie eine Papierrechnung wünschen, deaktivieren Sie diese Option&quot;</description>
    <label>Digitale Rechnung</label>
    <type>Checkbox</type>
</CustomField>