force-app/main/default/objects/Account/fields/DigitalInvoiceByEmail__c.field-meta.xml
<CustomField>
    <fullName>DigitalInvoiceByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitale Rechnung per E-Mail</label>
    <type>Checkbox</type>
</CustomField>