force-app/main/default/objects/Account/fields/EchobotCompanyId__c.field-meta.xml
<CustomField>
    <fullName>EchobotCompanyId__c</fullName>
    <label>Dealfront Firmen ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>