force-app/main/default/objects/Account/fields/EchobotConnectDirectlink__c.field-meta.xml
<CustomField>
    <fullName>EchobotConnectDirectlink__c</fullName>
    <formula>IF(NOT(ISBLANK(EchobotCompanyId__c)),&quot;https://app.dealfront.com/cn/#/company/&quot;&amp;EchobotCompanyId__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealfront CONNECT Directlink</label>
    <type>Text</type>
</CustomField>