force-app/main/default/objects/Account/fields/IsATPSyncFailed__c.field-meta.xml
<CustomField>
    <fullName>IsATPSyncFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsATPSyncFailed</label>
    <type>Checkbox</type>
</CustomField>