force-app/main/default/objects/Account/fields/IsBillingAddressValid__c.field-meta.xml
<CustomField>
    <fullName>IsBillingAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBillingAddressValid</label>
    <type>Checkbox</type>
</CustomField>