force-app/main/default/objects/Account/fields/IsBusinessAddressValid__c.field-meta.xml
<CustomField>
    <fullName>IsBusinessAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Address Valid</label>
    <type>Checkbox</type>
</CustomField>