force-app/main/default/objects/Account/fields/LocationAccessRestriction__c.field-meta.xml
<CustomField>
    <fullName>LocationAccessRestriction__c</fullName>
    <label>Standortzugangbeschräkung</label>
    <type>TextArea</type>
</CustomField>