force-app/main/default/objects/Account/fields/RecipientsEmailAddressInvoice__c.field-meta.xml
<CustomField>
    <fullName>RecipientsEmailAddressInvoice__c</fullName>
    <label>E-Mail-Adresse des Empfängers (Rechnung)</label>
    <type>Email</type>
</CustomField>