force-app/main/default/objects/Account/fields/RegisterCourt__c.field-meta.xml
<CustomField>
    <fullName>RegisterCourt__c</fullName>
    <label>Registergericht</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GermanCities</valueSetName>
    </valueSet>
</CustomField>