force-app/main/default/objects/Account/fields/RegisterKey__c.field-meta.xml
<CustomField>
    <fullName>RegisterKey__c</fullName>
    <formula>TEXT(RegisterCourt__c)&amp;&quot; &quot;&amp;TEXT(Register__c)&amp;&quot; &quot;&amp;RegisterNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register Key</label>
    <type>Text</type>
</CustomField>