force-app/main/default/objects/Account/fields/RegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>RegisterNumber__c</fullName>
    <label>Registernummer</label>
    <length>12</length>
    <type>Text</type>
</CustomField>