force-app/main/default/objects/Account/fields/VATRegNo__c.field-meta.xml
<CustomField>
    <fullName>VATRegNo__c</fullName>
    <label>Umsatzsteuer Identifikationsnummer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>