force-app/main/default/objects/Account/listViews/Billing_Accounts.listView-meta.xml
<ListView>
    <fullName>Billing_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ATPBillingAccountId__c</columns>
    <columns>ATPInvoiceAccountId__c</columns>
    <columns>BillingAddress__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Billing</value>
    </filters>
    <label>Billing Accounts</label>
</ListView>