force-app/main/default/objects/Account/listViews/Business_Accounts.listView-meta.xml
<ListView>
    <fullName>Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ATPAccountId__c</columns>
    <columns>BusinessAddress__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Business</value>
    </filters>
    <label>Business Accounts</label>
</ListView>