force-app/main/default/objects/Account/listViews/Business_Accounts_der_letzten_10_Tage.listView-meta.xml
<ListView>
    <fullName>Business_Accounts_der_letzten_10_Tage</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ATPAccountId__c</columns>
    <columns>BusinessAddress__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Business</value>
    </filters>
    <label>Business Accounts der letzten 10 Tage</label>
</ListView>