force-app/main/default/objects/Account/listViews/Service_Accounts_2.listView-meta.xml
<ListView>
    <fullName>Service_Accounts_2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__PremisesId__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Service</value>
    </filters>
    <label>Service Accounts</label>
</ListView>